@@ -49,9 +49,13 @@ FLEXT_CALLSET_(SFUN,float)
 FLEXT_CALLSET_(SFUN,int)
 
 //! Declare a set function for a boolean attribute
-#define FLEXT_CALLSET_B(FUN) \
+#define FLEXT_CALLSET_B(SFUN) \
+\
+FLEXT_CALLSET_(SFUN,bool)
+/*
 static bool FLEXT_SET_PRE(FUN)(flext_base *c,int &arg) \
 { bool b = arg != 0; FLEXT_CAST<thisType *>(c)->FUN(b); return true; }
+*/
 
 //! Declare a set function for an enum attribute
 #define FLEXT_CALLSET_E(SFUN,TP) \
@@ -85,9 +89,13 @@ FLEXT_CALLGET_(GFUN,float)
 FLEXT_CALLGET_(GFUN,int)
 
 //! Declare a get function for a boolean attribute
-#define FLEXT_CALLGET_B(FUN) \
+#define FLEXT_CALLGET_B(GFUN) \
+\
+FLEXT_CALLGET_(GFUN,bool)
+/*
 static bool FLEXT_GET_PRE(FUN)(flext_base *c,int &arg) \
 { bool b; FLEXT_CAST<thisType *>(c)->FUN(b); arg = b?1:0; return true; }
+*/
 
 //! Declare a get function for an enum attribute
 #define FLEXT_CALLGET_E(GFUN,TP) \
