@@ -29,6 +29,7 @@ Version history:
 - better FLEXT_OSAPI resolution
 - ListAttributes (or the getattributes message) now lists attributes in the order they were created (first class, then object scope)
 - enforcing usage of STL
+- explicit boolean attributes (great for attribute editor layout!)
 
 0.4.4:
 - fixed deadly bug for Max/MSP method-to-symbol-binding proxies
